--- a/copyskipper/index.html
+++ b/copyskipper/index.html
@@ -1,23 +1,35 @@
-<!doctype html><meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<!doctype html>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>CopySkipper — Support</title>
+<meta name="description" content="CopySkipper support: one-way folder sync for macOS.">
 <link rel="stylesheet" href="../style.css">
-<main class="card">
-  <h1>CopySkipper — Support</h1>
-  <p>CopySkipper is a clean, one-way folder <b>sync</b> for macOS.
-     Drag two folders, click <i>Sync now</i>, and optionally let Auto-run keep the target mirrored.</p>
+<link rel="icon" href="../icons/copyskipper.png">
 
-  <h2>Quick answers</h2>
-  <ul>
-    <li><b>Cancel a running sync?</b> Click <i>Cancel sync</i>.</li>
-    <li><b>What does “Mirror: delete extra items in the target folder” do?</b>
-        It removes items that exist only in the target. Use with care.</li>
-    <li><b>Auto-run not starting?</b> Ensure both folders are selected and the timer is enabled.</li>
-  </ul>
+<div class="container">
+  <header class="header">
+    <h1>CopySkipper — Support</h1>
+    <p>CopySkipper is a clean, one-way folder <b>sync</b> for macOS.<br>
+       Drag two folders, click <i>Sync now</i>, and optionally let Auto-run keep the target mirrored.</p>
+    <div class="nav">
+      <a class="btn" href="../">← All apps</a>
+      <a class="btn" href="mailto:support@example.com">Contact support</a>
+    </div>
+  </header>
 
-  <h2>Contact</h2>
-  <p>Email: <a href="mailto:support@example.com">support@example.com</a></p>
+  <section class="section card">
+    <h2>Quick answers</h2>
+    <ul>
+      <li><b>Cancel a running sync?</b> Click <i>Cancel sync</i>.</li>
+      <li><b>What does “Mirror: delete extra items in the target folder” do?</b>
+          It removes items that exist only in the target. Use with care.</li>
+      <li><b>Auto-run doesn’t start immediately?</b> It triggers after a sync completes and the set interval elapses.</li>
+      <li><b>Progress looks stuck at 0%?</b> Deletions/metadata updates can move the bar slowly; completion is accurate.</li>
+    </ul>
+    <hr>
+    <p>If you need more help, email us at <a href="mailto:support@example.com">support@example.com</a>.</p>
+  </section>
 
-  <p class="fineprint">© 2025 Your Name. All rights reserved. ·
-     <a href="../privacy/">Privacy Policy</a></p>
-</main>
+  <p class="footer">© 2025 Your Name or Company. All rights reserved. ·
+    <a href="../privacy/">Privacy Policy</a></p>
+</div>
