mailアドレス修正

--- a/copyskipper/index.html
+++ b/copyskipper/index.html
@@ -13,7 +13,7 @@
        Drag two folders, click <i>Sync now</i>, and optionally let Auto-run keep the target mirrored.</p>
     <div class="nav">
       <a class="btn" href="../">← All apps</a>
-      <a class="btn" href="mailto:support@example.com">Contact support</a>
+      <a class="btn" href="mailto:kjdevapphelp@gmail.com">Contact support</a>
     </div>
   </header>
 
@@ -27,7 +27,7 @@
       <li><b>Progress looks stuck at 0%?</b> Deletions/metadata updates can move the bar slowly; completion is accurate.</li>
     </ul>
     <hr>
-    <p>If you need more help, email us at <a href="mailto:support@example.com">support@example.com</a>.</p>
+    <p>If you need more help, email us at <a href="mailto:kjdevapphelp@gmail.com">support@example.com</a>.</p>
   </section>
 
   <p class="footer">© 2025 Your Name or Company. All rights reserved. ·
