--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        Primary language: English.</p>
     <div class="nav">
       <a class="btn" href="privacy/">Privacy Policy</a>
-      <a class="btn" href="mailto:support@example.com">Contact support</a>
+      <a class="btn" href="mailto:kjdevapphelp@gmail.com">Contact support</a>
     </div>
   </header>
 
