mailアドレス修正

--- a/copyskipper/index.html
+++ b/copyskipper/index.html
@@ -27,7 +27,7 @@
       <li><b>Progress looks stuck at 0%?</b> Deletions/metadata updates can move the bar slowly; completion is accurate.</li>
     </ul>
     <hr>
-    <p>If you need more help, email us at <a href="mailto:kjdevapphelp@gmail.com">support@example.com</a>.</p>
+    <p>If you need more help, email us at <a href="mailto:kjdevapphelp@gmail.com">kjdevapphelp@gmail.com</a>.</p>
   </section>
 
   <p class="footer">© 2025 Your Name or Company. All rights reserved. ·
