--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
         </div>
       </a>
     </div>
-    <p class="footer">© 2025 Your Name or Company. All rights reserved.</p>
+    <p class="footer">© 2025 kj app dev. All rights reserved.</p>
   </section>
 </div>
