--- a/privacy/index.html
+++ b/privacy/index.html
@@ -4,5 +4,5 @@
   <h1>Privacy Policy</h1>
   <p>Our apps do not collect personal data. No analytics, no tracking, no ads.
      If you email support, we will only use your message to respond.</p>
-  <p class="fineprint">© 2025 Your Name</p>
+  <p class="fineprint">© 2025 Hiroshi Kojimae</p>
 </main>
