edit Studio Mate site

--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
         </div>
       </a>
 
-      <!-- 他アプリ例（あとで増やす） -->
-      <a class="card app" href="another-app/">
+      <!-- Studio Mate -->
+      <a class="card app" href="studiomate/">
         <div class="icon"><span style="font-size:26px">✨</span></div>
         <div class="meta">
-          <h3>Another App</h3>
-          <p>Short tagline goes here.</p>
+          <h3>Studio Mate</h3>
+          <p>Sync your PDF and DAW projects effortlessly.</p>
         </div>
       </a>
 
-      <a class="card app" href="third-app/">
+      <a class="card app" href="proaudiocompare/">
         <div class="icon"><span style="font-size:26px">🎛️</span></div>
         <div class="meta">
-          <h3>Third App</h3>
-          <p>Short tagline goes here.</p>
+          <h3>Pro Audio Compare</h3>
+          <p>Compare audio files with ease.</p>
         </div>
       </a>
     </div>
