edit Studio Mate site

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
       <!-- CopySkipper card -->
       <a class="card app" href="copyskipper/">
         <div class="icon">
-          <!-- ここに 128x128 PNG を置きたいなら <img src="../icons/copyskipper.png" width="56" height="56"> に差し替え可 -->
-          <span style="font-size:26px">🧭</span>
+          <img src="img/copskipper_icon.png" alt="CopySkipper icon" width="26" height="26">
         </div>
         <div class="meta">
           <h3>CopySkipper <span class="tag">sync</span></h3>
@@ -33,7 +32,9 @@
 
       <!-- Studio Mate -->
       <a class="card app" href="studiomate/">
-        <div class="icon"><span style="font-size:26px">✨</span></div>
+        <div class="icon">
+          <img src="img/studiomate_icon,png" alt="Studio Mate icon" width="26" height="26">
+        </div>
         <div class="meta">
           <h3>Studio Mate</h3>
           <p>Sync your PDF and DAW projects effortlessly.</p>
@@ -41,7 +42,9 @@
       </a>
 
       <a class="card app" href="proaudiocompare/">
-        <div class="icon"><span style="font-size:26px">🎛️</span></div>
+        <div class="icon">
+          <img src="img/proaudiocompare_icon.png" alt="Pro Audio Compare icon" width="26" height="26">
+        </div>
         <div class="meta">
           <h3>Pro Audio Compare</h3>
           <p>Compare audio files with ease.</p>
