--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <img src="img/copskipper_icon.png" alt="CopySkipper icon" width="26" height="26">
         </div>
         <div class="meta">
-          <h3>CopySkipper <span class="tag">sync</span></h3>
+          <!-- <h3>CopySkipper <span class="tag">sync</span></h3> -->
           <p>One-way folder sync for macOS. Drag, <i>Sync now</i>, Auto-run.</p>
         </div>
       </a>
@@ -33,7 +33,7 @@
       <!-- Studio Mate -->
       <a class="card app" href="studiomate/">
         <div class="icon">
-          <img src="img/studiomate_icon,png" alt="Studio Mate icon" width="26" height="26">
+          <img src="img/studiomate_icon.png" alt="Studio Mate icon" width="26" height="26">
         </div>
         <div class="meta">
           <h3>Studio Mate</h3>
