--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="meta">
           <!-- <h3>CopySkipper <span class="tag">sync</span></h3> -->
-          <p>One-way folder sync for macOS. Drag, <i>Sync now</i>, Auto-run.</p>
+          <p>One-way folder sync for macOS.</p>
         </div>
       </a>
 
