--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <img src="img/copskipper_icon.png" alt="CopySkipper icon" width="26" height="26">
         </div>
         <div class="meta">
-          <!-- <h3>CopySkipper <span class="tag">sync</span></h3> -->
+          <h3>CopySkipper</h3>
           <p>One-way folder sync for macOS.</p>
         </div>
       </a>
