--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
         <div class="meta">
           <h3>QuickSearchExt</h3>
-          <p>Instantly search selected text on your favorite sites</p>
+          <p>Instantly search selected text on your favorite sites.</p>
         </div>
       </a>
     </div>
