--- a/quicksearchext/index.html
+++ b/quicksearchext/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Studio Mate — Support</title>
-<meta name="description" content="Studio Mate support: one-way folder sync for macOS.">
+<title>QuickSearchExt — Support</title>
+<meta name="description" content="QuickSearchExt support: one-way folder sync for macOS.">
 <link rel="stylesheet" href="../style.css">
-<link rel="icon" href="../icons/Studio Mate.png">
+<link rel="icon" href="../icons/quicksearchext_icon.png">
 
 <div class="container">
   <header class="header">
-    <h1>Studio Mate — Support</h1>
+    <h1>QuickSearchExt — Support</h1>
     <p>Add timecode markers directly into your PDF.<br>
        Locate your DAW instantly from each marker.</p>
     <div class="nav">
