--- a/copyskipper/index.html
+++ b/copyskipper/index.html
@@ -4,7 +4,7 @@
 <title>CopySkipper — Support</title>
 <meta name="description" content="CopySkipper support: one-way folder sync for macOS.">
 <link rel="stylesheet" href="../style.css">
-<link rel="icon" href="../icons/copyskipper.png">
+<link rel="icon" href="../icons/copskipper_icon.png">
 
 <div class="container">
   <header class="header">
