--- a/studiomate/index.html
+++ b/studiomate/index.html
@@ -4,7 +4,7 @@
 <title>Studio Mate — Support</title>
 <meta name="description" content="Studio Mate support: one-way folder sync for macOS.">
 <link rel="stylesheet" href="../style.css">
-<link rel="icon" href="../icons/Studio Mate.png">
+<link rel="icon" href="../icons/studiomate_icon.png">
 
 <div class="container">
   <header class="header">
