--- a/quicksearchext/index.html
+++ b/quicksearchext/index.html
@@ -9,8 +9,7 @@
 <div class="container">
   <header class="header">
     <h1>QuickSearchExt — Support</h1>
-    <p>Add timecode markers directly into your PDF.<br>
-       Locate your DAW instantly from each marker.</p>
+    <p>Instantly search selected text on your favorite sites</p>
     <div class="nav">
       <a class="btn" href="../">← All apps</a>
       <a class="btn" href="mailto:kjdevapphelp@gmail.com">Contact support</a>
